--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 				<img class="card-img-top" src="threejs.PNG" alt="threejs">
 			</a>
 			<div class="card-body cardbg">
-				<h5 class="card-title">3D Art Gallery Built with Three.js</h5>
-				<p class="card-text">3D art gallery with music I created using code in Sonic Pi.</p>
+				<h5 class="card-title">3D Art Gallery</h5>
+				<p class="card-text">3D art gallery build with Three.js and music I created using Sonic Pi.</p>
 			</div>
 		</div>
 		<br>
@@ -103,8 +103,10 @@
 				<img class="card-img-top" src="shawnee.PNG" alt="parallax">
 			</a>
 			<div class="card-body cardbg">
-				<h5 class="card-title">Shawnee National Forest info site</h5>
-				<p class="card-text">Informational webpage with parallax effect on desktop using the parallax.js package and jQuery.</p>
+				<h5 class="card-title">Shawnee National Forest</h5>
+				<p class="card-text">
+					Single page informational site with image parallax and text fade-in effects using Parallax.js, Lax.js, and jQuery.
+				</p>
 			</div>
 		</div>
 		<br>
