code is more DRY

--- a/Compair/index.html
+++ b/Compair/index.html
@@ -21,7 +21,7 @@
 	</div>
 
 	<div id="c1">
-		<input onchange='c1weatherAsk()' id="c1input" type="text" placeholder="Enter 1st City">
+		<input onchange='weatherAsk(1)' id="c1input" type="text" placeholder="Enter 1st City">
 		
 
 		<!-- Fix layouts so that everything is laid out evenly -->
@@ -55,7 +55,7 @@
 	</div>
 
 	<div id="c3">
-		<input onchange='c3weatherAsk()' id="c3input" type="text" placeholder="Enter 2nd City">
+		<input onchange='weatherAsk(3)' id="c3input" type="text" placeholder="Enter 2nd City">
 		<div class="flexwrap">
 
 			<div class="smtext"> Temp 
