--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	}
 
 	.seperate {
-		margin: 5px;
+		margin: 10px;
 	}
 
 	img {
@@ -42,12 +42,12 @@
 <body>
 	
 		<div class="card text-center seperate" style="width: 66%;">
-			<a href="https://facebrainmm.herokuapp.com/index" target="_blank">
-				<img class="card-img-top" src="FaceBrainMM.PNG" alt="facebrain">
+			<a href="https://metmmapp.herokuapp.com" target="_blank">
+				<img class="card-img-top" src="MetMMApp.PNG" alt="Metropolitan Museum">
 			</a>
 			<div class="card-body cardbg">
-				<h5 class="card-title">Face Recognition App Built with React.js</h5>
-				<p class="card-text">Using the Clarifai API to recognize and locate a face in a picture. Complete with sign-in and register functionality using express.js and postgreSQL.</p>
+				<h5 class="card-title">Metropolitan Museum App Built with React JS</h5>
+				<p class="card-text">Using the Metropolitan Museum of Art Collection API to create a randomized art gallery. You can also search and view the Met's 470,000+ collection.</p>
 			</div>
 		</div>
 		<br>
@@ -64,12 +64,23 @@
 		<br>
 
 		<div class="card text-center seperate" style="width: 66%;">
+			<a href="https://facebrainmm.herokuapp.com" target="_blank">
+				<img class="card-img-top" src="FaceBrainMM.PNG" alt="facebrain">
+			</a>
+			<div class="card-body cardbg">
+				<h5 class="card-title">Face Recognition App Built with React JS</h5>
+				<p class="card-text">Using the Clarifai API to recognize and locate a face in a picture. Complete with sign-in and register functionality using express.js and postgreSQL. Created as part of the Complete Web Developer course on Udemy.com.</p>
+			</div>
+		</div>
+		<br>		
+
+		<div class="card text-center seperate" style="width: 66%;">
 			<a href="https://max1manley.github.io/ThreeJS" target="_blank">
 				<img class="card-img-top" src="threejs.PNG" alt="threejs">
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">3D Art Gallery</h5>
-				<p class="card-text">3D art gallery build with Three.js and music I created using Sonic Pi.</p>
+				<p class="card-text">3D art gallery build with Three.js and music I created using Sonic Pi. Created as part of a coding challenge.</p>
 			</div>
 		</div>
 		<br>
@@ -80,21 +91,8 @@
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">Memory Game</h5>
-				<p class="card-text">Match the randomly sorted cards. Keeps track of time and moves taken.</p>
+				<p class="card-text">Match the randomly sorted cards. Keeps track of time and moves taken. Created as part of a coding challenge.</p>
 				</div>
-		</div>
-		<br>
-
-
-
-		<div class="card text-center seperate" style="width: 66%;">
-			<a href="https://robofriendsmm.herokuapp.com/index" target="_blank">
-				<img class="card-img-top" src="Robofriends.png" alt="robofriends">
-			</a>
-			<div class="card-body cardbg">
-				<h5 class="card-title">Robofriends App Built with React.js</h5>
-				<p class="card-text">Search through all of your robot friends quickly and easily. Robots provided by the RoboHash API.</p>
-			</div>
 		</div>
 		<br>
 
@@ -111,6 +109,16 @@
 		</div>
 		<br>
 
+		<div class="card text-center seperate" style="width: 66%;">
+			<a href="https://robofriendsmm.herokuapp.com" target="_blank">
+				<img class="card-img-top" src="Robofriends.png" alt="robofriends">
+			</a>
+			<div class="card-body cardbg">
+				<h5 class="card-title">Robofriends App Built with React JS</h5>
+				<p class="card-text">Search through all of your robot friends quickly and easily. Robots provided by the RoboHash API. Created as part of the Complete Web Developer course on Udemy.com. (This app is hosted for free so it may take longer to load.)</p>
+			</div>
+		</div>
+		<br>
 
 </body>
 </html>
