robofriends add to github

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">Metropolitan Museum App Built with React JS</h5>
-				<p class="card-text">Using the Metropolitan Museum of Art Collection API to create a randomized art gallery. You can also search and view the Met's 470,000+ collection.</p>
+				<div><a href="https://github.com/Max1Manley/max1manley.github.io/tree/master/mmapp" targer="_blank">View Code</a></div>
+				<div class="card-text">Using the Metropolitan Museum of Art Collection API to create a randomized art gallery. You can also search and view the Met's 470,000+ collection.</div>
 			</div>
 		</div>
 		<br>
@@ -58,7 +59,8 @@
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">Compair</h5>
-				<p class="card-text">Compare weather conditions between cities. Uses Open Weather Map API for weather data.</p>
+				<div><a href="https://github.com/Max1Manley/max1manley.github.io/tree/master/Compair" targer="_blank">View Code</a></div>
+				<div class="card-text">Compare weather conditions between cities. Uses Open Weather Map API for weather data.</div>
 			</div>
 		</div>
 		<br>
@@ -69,7 +71,8 @@
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">Face Recognition App Built with React JS</h5>
-				<p class="card-text">Using the Clarifai API to recognize and locate a face in a picture. Complete with sign-in and register functionality using express.js and postgreSQL. Created as part of the Complete Web Developer course on Udemy.com.</p>
+				<div><a href="https://github.com/Max1Manley/smart-brain" targer="_blank">View Code</a></div>
+				<div class="card-text">Using the Clarifai API to recognize and locate a face in a picture. Complete with sign-in and register functionality using express.js and postgreSQL. Created as part of the Complete Web Developer course on Udemy.com.</div>
 			</div>
 		</div>
 		<br>		
@@ -80,7 +83,8 @@
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">3D Art Gallery</h5>
-				<p class="card-text">3D art gallery build with Three.js and music I created using Sonic Pi. Created as part of a coding challenge.</p>
+				<div><a href="https://github.com/Max1Manley/max1manley.github.io/tree/master/ThreeJS" targer="_blank">View Code</a></div>
+				<div class="card-text">3D art gallery build with Three.js and music I created using Sonic Pi. Created as part of a coding challenge.</div>
 			</div>
 		</div>
 		<br>
@@ -91,7 +95,10 @@
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">Memory Game</h5>
-				<p class="card-text">Match the randomly sorted cards. Keeps track of time and moves taken. Created as part of a coding challenge.</p>
+				<div>
+					<a href="https://github.com/Max1Manley/max1manley.github.io/tree/master/codingchallenge14" targer="_blank">View Code</a>
+				</div>
+				<div class="card-text">Match the randomly sorted cards. Keeps track of time and moves taken. Created as part of a coding challenge.</div>
 				</div>
 		</div>
 		<br>
@@ -102,9 +109,10 @@
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">Shawnee National Forest</h5>
-				<p class="card-text">
+				<div><a href="https://github.com/Max1Manley/max1manley.github.io/tree/master/parallax" targer="_blank">View Code</a></div>
+				<div class="card-text">
 					Single page informational site with image parallax and text fade-in effects using Parallax.js, Lax.js, and jQuery.
-				</p>
+				</div>
 			</div>
 		</div>
 		<br>
@@ -115,7 +123,7 @@
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">Robofriends App Built with React JS</h5>
-				<p class="card-text">Search through all of your robot friends quickly and easily. Robots provided by the RoboHash API. Created as part of the Complete Web Developer course on Udemy.com. (This app is hosted for free so it may take longer to load.)</p>
+				<div class="card-text">Search through all of your robot friends quickly and easily. Robots provided by the RoboHash API. Created as part of the Complete Web Developer course on Udemy.com. (This app is hosted for free so it may take longer to load.)</div>
 			</div>
 		</div>
 		<br>
