organizing img files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="shortcut icon" href="images/favicon.ico">
 <head>
 	<title>Max Manley - Web Developer</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -43,7 +44,7 @@
 	
 		<div class="card text-center seperate" style="width: 66%;">
 			<a href="https://metmmapp.herokuapp.com" target="_blank">
-				<img class="card-img-top" src="MetMMApp.PNG" alt="Metropolitan Museum">
+				<img class="card-img-top" src="images/MetMMApp.PNG" alt="Metropolitan Museum">
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">Metropolitan Museum App Built with React JS</h5>
@@ -55,7 +56,7 @@
 
 		<div class="card text-center seperate" style="width: 66%;">
 			<a href="https://max1manley.github.io/Compair" target="_blank">
-				<img class="card-img-top" src="compair.PNG" alt="Compair">
+				<img class="card-img-top" src="images/compair.PNG" alt="Compair">
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">Compair</h5>
@@ -67,7 +68,7 @@
 
 		<div class="card text-center seperate" style="width: 66%;">
 			<a href="https://facebrainmm.herokuapp.com" target="_blank">
-				<img class="card-img-top" src="FaceBrainMM.PNG" alt="facebrain">
+				<img class="card-img-top" src="images/FaceBrainMM.PNG" alt="facebrain">
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">Face Recognition App Built with React JS</h5>
@@ -79,7 +80,7 @@
 
 		<div class="card text-center seperate" style="width: 66%;">
 			<a href="https://max1manley.github.io/ThreeJS" target="_blank">
-				<img class="card-img-top" src="threejs.PNG" alt="threejs">
+				<img class="card-img-top" src="images/threejs.PNG" alt="threejs">
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">3D Art Gallery</h5>
@@ -91,7 +92,7 @@
 
 		<div class="card text-center seperate" style="width: 66%;">
 			<a href="https://max1manley.github.io/codingchallenge14/" target="_blank">
-				<img class="card-img-top" src="MemoryGame.PNG" alt="memorygame">
+				<img class="card-img-top" src="images/MemoryGame.PNG" alt="memorygame">
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">Memory Game</h5>
@@ -105,7 +106,7 @@
 
 		<div class="card text-center seperate" style="width: 66%;">
 			<a href="https://max1manley.github.io/parallax" target="_blank">
-				<img class="card-img-top" src="shawnee.PNG" alt="parallax">
+				<img class="card-img-top" src="images/shawnee.PNG" alt="parallax">
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">Shawnee National Forest</h5>
@@ -119,7 +120,7 @@
 
 		<div class="card text-center seperate" style="width: 66%;">
 			<a href="https://max1manley-robofriends.glitch.me/" target="_blank">
-				<img class="card-img-top" src="Robofriends.png" alt="robofriends">
+				<img class="card-img-top" src="images/Robofriends.png" alt="robofriends">
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">Robofriends App Built with React JS</h5>
