updated url for smartbrain

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<br>
 
 		<div class="card text-center seperate" style="width: 66%;">
-			<a href="https://facebrainmm.herokuapp.com" target="_blank">
+			<a href="https://smartbrainmm.herokuapp.com" target="_blank">
 				<img class="card-img-top" src="images/FaceBrainMM.PNG" alt="facebrain">
 			</a>
 			<div class="card-body cardbg">
