--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
 			</a>
 			<div class="card-body cardbg">
 				<h5 class="card-title">Metropolitan Museum App Built with React JS</h5>
-				<div><a href="https://github.com/Max1Manley/max1manley.github.io/tree/master/mmapp" target="_blank">View Code</a></div>
-				<div class="card-text">Using the Metropolitan Museum of Art Collection API to create a randomized art gallery. You can also search and view the Met's 470,000+ collection.</div>
+				<div>
+					| <a href="https://github.com/Max1Manley/MMapp" target="_blank">View App Code</a>
+					| <a href="https://github.com/Max1Manley/ExpressJs" target="_blank">View Server Code</a> |
+				</div>
+				<div class="card-text">This app lets you view and search art from the Met and save your favorites to your account. Uses React, expressJS, bcryptJS, knexJS, postgreSQL and The Metropolitan Museum of Art Collection API</div>
 			</div>
 		</div>
 		<br>
