new GLITCH URL for smartbrain

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<br>
 
 		<div class="card text-center seperate" style="width: 66%;">
-			<a href="https://smartbrainmm.herokuapp.com" target="_blank">
+			<a href="https://max1manley-smart-brain.glitch.me/" target="_blank">
 				<img class="card-img-top" src="images/FaceBrainMM.PNG" alt="facebrain">
 			</a>
 			<div class="card-body cardbg">
@@ -128,7 +128,7 @@
 			<div class="card-body cardbg">
 				<h5 class="card-title">Robofriends App Built with React JS</h5>
 				<div><a href="https://github.com/Max1Manley/robofriends" target="_blank">View Code</a></div>
-				<div class="card-text">Search through all of your robot friends quickly and easily. Robots provided by the RoboHash API. Created as part of the Complete Web Developer course on Udemy.com. (This app is hosted for free so it may take longer to load.)</div>
+				<div class="card-text">Search through all of your robot friends quickly and easily. Robots provided by the RoboHash API. Created as part of the Complete Web Developer course on Udemy.com.</div>
 			</div>
 		</div>
 		<br>
