cleaned up functionality

--- a/Compair/index.html
+++ b/Compair/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<div class="header">
+	<div>
 		<strong><font class="Comp">Comp</font><font class="air">air</font></strong>
 	</div>
 
@@ -35,7 +35,7 @@
 				<div id="c1wind" class="bgtext"> </div>
 			</div>
 			<div class="smtext">
-				<div id="c1icon" class="iconRoom"></div>
+				<div id="c1icon"></div>
 			</div>
 
 		</div>
