cleaned up some style

--- a/Compair/index.html
+++ b/Compair/index.html
@@ -8,7 +8,7 @@
 <body>
 
 	<div>
-		<strong><font class="Comp">Comp</font><font class="air">air</font></strong>
+		<strong><span class="Comp">Comp</span><span class="air">air</span></strong>
 	</div>
 
 	<div id="menu">
